# wb_product_parser

./: pyproject.toml
tests/: test_wb_product_parser.py
wb_product_parser/: README.md  analize.py  config.py  downloads.py  notebook_page_parser.py  phones_page_parser.py  problems.txt  prod_page_parser.py  scan_pages.py  schemas.py
